--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
     <title>SoundField</title>
     <script src="https://kit.fontawesome.com/3453a91538.js" crossorigin="anonymous"></script>
+    <script src="luxon.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
